updated the UI of the header and the footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,7 +17,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="col-lg-2 col-md-3 col-sm-5">
                 <div class="footer__widget">
                     <h6>Quick links</h6>
@@ -40,50 +40,25 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-8 col-sm-8">
+  
+        <div class="col-lg-4 col-md-8 col-sm-8">
                 <div class="footer__newslatter">
-                    <section class="section newsletter">
-                        <div class="container">
-                
-                          <div class="newsletter-card" style="background-image: url('./assets/images/newsletter-bg.png')">
-                
-                            <h2 class="card-title">Subscribe Newsletter</h2>
-                
-                            <p class="card-text">
-                              Enter your email below to be the first to know about new collections and product launches.
-                            </p>
-                
-                            <form action="" class="card-form">
-                
-                              <div class="input-wrapper">
-                                <ion-icon name="mail-outline"></ion-icon>
-                
-                                <input type="email" name="emal" placeholder="Enter your email" required class="input-field">
-                              </div>
-                
-                              <button type="submit" class="btn btn-primary w-10" (click)="onsubmit">
-                                <span>Subscribe</span>
-                
-                                <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
-                              </button>
-                
-                            </form>
-                
-                          </div>
-                
-                        </div>
-                      </section>
-                
+                    <h6>NEWSLETTER</h6>
+                    <form action="#">
+                        <input type="text" name="email" placeholder="Enter your email" required class="input-field">
+                        <button type="submit" class="site-btn" (click)="onsubmit()">Subscribe</button>
+                    </form>
                     <div class="footer__social">
-                        <a href="www.facebook.tn"><i class="fa fa-facebook"></i></a>
-                        <a href="www.twitter.tn"><i class="fa fa-twitter"></i></a>
-                        <a href="www.youtube.tn"><i class="fa fa-youtube-play"></i></a>
-                        <a href="www.instagram.tn"><i class="fa fa-instagram"></i></a>
-                        <a href="www.printerest.tn"><i class="fa fa-pinterest"></i></a>
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-youtube-play"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-pinterest"></i></a>
                     </div>
                 </div>
             </div>
         </div>
+
         <div class="row">
             <div class="col-lg-12">
                 <div class="footer__copyright__text">
