--- a/src/app/review-modal/review-modal.component.css
+++ b/src/app/review-modal/review-modal.component.css
@@ -65,6 +65,13 @@
   margin: 10px 0;
 }
 
+.no-reviews {
+  text-align: center;
+  color: #888;
+  font-style: italic;
+  margin-bottom: 20px;
+}
+
 .stars {
   margin-top: 10px;
 }
