--- a/src/app/Carts/cart/cart.component.html
+++ b/src/app/Carts/cart/cart.component.html
@@ -69,7 +69,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="cart__btn">
-                        <a href="#">Continue Shopping</a>
+                        <a routerLink="/catalogue">Continue Shopping</a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
